# blyat

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.org
.github/workflows/: cmake-multi-platform.yml
config/: blyat.toml
docker/: scripts.sh
include/blyat/: blyat.hh  config.hh  id.hh  message.hh  mock.hh  room.hh  server.hh  session.hh  socket.hh  tag.hh  uuid.hh
include/blyat/core/: exception.hh  http.hh  mime.hh  string.hh  symbol.hh  uri.hh
src/: config.cc  main.cc  message.cc  mock.cc  room.cc  server.cc  session.cc  socket.cc  tag.cc  uuid.cc
src/core/: exception.cc
